--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="staticmain"><h1>I believe this is overcomplicated</h1></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
